updates gift carfd page to have pacas logo and adds in the pacas gift card image to the theme

--- a/templates/gift_card.liquid
+++ b/templates/gift_card.liquid
@@ -65,7 +65,7 @@
   <div class="wrap">
 
     <header role="banner" id="header">
-      <a href="{{ shop.url }}" class="logo"><img src="{{'jlogo.png' | asset_url}}" class="logo"/></a>
+      <a href="{{ shop.url }}" class="logo"><img src="{{'pacas.png' | asset_url}}" class="logo"/></a>
       <a href="{{ shop.url }}" class="shop-url">{{ shop.url | remove: 'http://' }}</a>
     </header>
 
