changes colors to be on brand and finalizes the gift card page

--- a/templates/gift_card.liquid
+++ b/templates/gift_card.liquid
@@ -52,15 +52,15 @@
     .logo { max-width: 150px; }
     body { 
       background: white;
-      font-family: Gilroy;
+      font-family: 'Gilroy';
     }
-    body h2  {color: #545359;}
+    body h2  {color: #7b8284;}
 
     #gift-card-outer-container {
-      background-color:  #F9F7F7;
+      background-color:  #fdf3ed;
       border-radius: 0;
     }
-    .btn { font-weight: 900; color: white; text-transform: none; background: #6DCDB8;}
+    .btn { font-weight: 900; color: white; text-transform: none; background:  #7b8284;}
   </style>
   <div class="wrap">
 
