updates the margin on the top of the account page to have a bit more room on desktop

--- a/templates/customers/account.liquid
+++ b/templates/customers/account.liquid
@@ -11,7 +11,7 @@
         </ul>
       </div>
       <div class="two-thirds accent-padding border-lightgray" id="order-history">
-        <h4 class="nmt">Order History</h4>
+        <h4 class="nmt tac">Order History</h4>
         {% if customer.orders.size !=0 %}
           <table class="order-history">
             <thead>
