aligns the titles of the order pages center to more evenly line up with forms

--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -236,7 +236,7 @@ img { max-width: 100%; }
     padding: 0 50px;
     justify-content: center;
   }
-  .customer { margin-top: 50px; }
+ #account, #account-order, #account-addresses { margin: 50px auto; }
   #materials-grid { padding: 0 50px 50px 50px; }
   .faq { padding: 50px 100px !important; }
   .collection .quarter { max-width: 200px; }
