--- a/templates/customers/addresses.liquid
+++ b/templates/customers/addresses.liquid
@@ -11,7 +11,7 @@
         </ul>
       </div>
   <div class="two-thirds accent-padding border-lightgray " id="order-history">
-    <h4 class="nmt">Manage Addresses</h4>
+    <h4 class="nmt tac">Manage Addresses</h4>
     <p class="action-add"><a href="#add" onclick="showAddAddress();">Add New Address</a></p>
     <div id="add-address">
       {% form 'customer_address', customer.new_address %}
