spaces out the order history table evenly and left aligns the headers

--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -1475,6 +1475,8 @@ table .lg { background-color: #d1cdcd; }
   box-sizing: border-box;
   height: 48px;
 }
+.order-history { width: 100%;  }
+.order-history thead { text-align: left; }
 .customer form input[type=submit] {
   width: 100%;
   border-radius: 80px;
