adds the automated redirect and cookie creation, adds a darken box shaadow on the nav when the page is darkened out (like when a modal is visible), and stops the modals from showing on the flow

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -103,7 +103,9 @@
 
     
        <script>jQuery(function(){jQuery(".swatch :radio").change(function(){var t=jQuery(this).closest(".swatch").attr("data-option-index"),e=jQuery(this).val();jQuery(this).closest("form").find(".single-option-selector").eq(t).val(e).trigger("change")})});</script>
-        {% include 'klaviyo-pop' %}
+    {% unless template contains 'flow' %}
+      {% include 'klaviyo-pop' %}
+    {% endunless %}
 
     {% include 'remove-sold-out' %}
     {% include 'linked-options' %}
