--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -520,6 +520,8 @@ p, textarea, td, ul, li, .error_message, .success_message { font-family: 'Quicks
 .cart-icon { width: 30px;}
 nav .jes { width: calc(50% - 65px); }
 nav { padding: 20px; box-sizing: border-box;} 
+nav.darken { box-shadow: 1px 1px 1px dimgrey !important;} 
+}
 /* footer */
 footer ul { list-style: none; padding-left: 0; line-height: 1.75; }
 .email {
