--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -31,7 +31,7 @@
   <img src="{{'sewing.jpg' | asset_url}}" class="fw third" />
 </section>
 <img src="{{'hearts-desktop3.png' | asset_url}}" class="heart-icons do" id="hd3"/>
-<section class="page-header do" id="sock-preview-benefits">
+<section class="page-header" id="sock-preview-benefits">
  <div class="flex-container">
     <div class="sock-preview accent-padding half">
       <div class="flex-container-no jes sock-images">
@@ -50,100 +50,39 @@
       </div>
     </div>
     <script>
-      $('.sock-options p').click(function() {
-        $(this).addClass('current').siblings().removeClass('current'); 
-        var imageChoice = $(this).attr("id")
-        switch(imageChoice) {
-          case "athletic-socksample":
-            $('#athletic').show().siblings().hide(); 
-            break;
-          case "casual-socksample":
-            $('#casual').show().siblings().hide(); 
-            break;
-          case "dress-socksample":
-            $('#dress').show().siblings().hide(); 
-            break;
-        }
-      })
-      $('#sock-preview-benefits .right-arrow').click(function() {
-        var currentImage = $('#sock-preview-benefits .sock-images img:visible'); 
-        if ($(currentImage).next().length > 0) {          
-          $(currentImage).hide().next().show();
-          $('.sock-options .current').removeClass('current').next().addClass('current')
-        }
-        else {
-          $(currentImage).hide()
-          $('#athletic').show();
-          $('.sock-options p').siblings().removeClass('current').first().addClass('current')
-        }
-      })
+ 
     </script>
    <div class="half">
     <div class="accent-padding">
         <div class="two-thirds flex-container-no paca-flip-benefits">
           <img src="{{'crown.png' | asset_url}}" class="icon" />
-          <p class="subscript"><b>Soft as Cashmere</b></p>
+          <p class="subscript" data-flip-text="Sample Text"><b>Soft as Cashmere</b></p>
         </div>
         <div class="two-thirds flex-container-no paca-flip-benefits">
           <img src="{{'poof.png' | asset_url}}" class="icon" />
-          <p class="subscript"><b>Non-itchy & Hypoallergenic</b></p>
+          <p class="subscript" data-flip-text="Sample Text"><b>Non-itchy & Hypoallergenic</b></p>
         </div>
         <div class="two-thirds flex-container-no paca-flip-benefits">
           <img src="{{'flame.png' | asset_url}}" class="icon" />
-          <p class="subscript"><b>Warmer than Wool</b></p>
+          <p class="subscript" data-flip-text="Sample Text"><b>Warmer than Wool</b></p>
         </div>
         <div class="two-thirds flex-container-no paca-flip-benefits">
           <img src="{{'leaf.png' | asset_url }}" class="icon" />
-          <p class="subscript"><b>Eco-friendly & Natural</b></p>
+          <p class="subscript" data-flip-text="Alpacas have a low environmental impact."><b>Eco-friendly & Natural</b></p>
         </div>
         <div class="two-thirds flex-container-no paca-flip-benefits">
           <img src="{{'ribbon.png' | asset_url }}" class="icon" />
-          <p class="subscript"><b>Gives Back</b></p>
+          <p class="subscript" data-flip-text="% of proceeds go to dressing kids in hospitals"><b>Gives Back</b></p>
         </div> 
         <div class="two-thirds flex-container-no paca-flip-benefits">
           <img src="{{'water.png' | asset_url}}" class="icon" />
-          <p class="subscript"><b>Thermoregulating & Waterproof</b></p>
+          <p class="subscript" data-flip-text="Sample Text"><b>Thermoregulating & Waterproof</b></p>
         </div>
       </div>
     </div>
    </div>
 </section>
-<section class="page-header mo">
-  <div class="flex-container-no" id="mobile-sock">
-    <img src="{{'bombas_socksample.png' | asset_url }}" id="sock-sample" />
-    <div class="half">
-      <div class="flex-container-no">
-        <img src="{{'crown.png' | asset_url}}" class="icon" />
-        <p class="subscript"><b>Soft as Cashmere</b></p>
-      </div>
-      <div class="flex-container-no">
-        <img src="{{'leaf.png' | asset_url}}" class="icon" />
-        <p class="subscript"><b>Eco-friendly & Natural</b></p>
-      </div>
-      <div class="flex-container-no">
-        <img src="{{'flame.png' | asset_url}}" class="icon" />
-        <p class="subscript"><b>Warmer than Wool</b></p>
-      </div>
-      <div class="flex-container-no">
-       <img src="{{'ribbon.png' | asset_url }}" class="icon" />
-       <p class="subscript"><b>Gives Back</b></p>
-      </div>
-       <div class="half flex-container-no">
-          <img src="{{'poof.png' | asset_url}}" class="icon" />
-          <p class="subscript"><b>Non-itchy & Hypoallergenic</b></p>
-        </div>
-          <div class="half flex-container-no">
-          <img src="{{'water.png' | asset_url}}" class="icon" />
-          <p class="subscript"><b>Thermoregulating & Waterproof</b></p>
-        </div>
-    </div>
-  </div>
-    <div class="flex-container-no jes">
-      <p class="clickable"><b>Athletic</b></p>
-      <p class="current clickable"><b>Casual</b></p>
-      <p class="clickable"><b>Dress</b></p>
-    </div>
-</section>
+
 <section class="flex-container-no double-padding" id="shop-all-cta">
   <div class="two-thirds tac">
     <h3>"The world's comfiest sock." - Chicago Times</h3>
