adds in the inset box shadow the cta section

--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -561,13 +561,16 @@ footer form {
   background-color: #fdf3ed;
   box-sizing: border-box;
 } 
-#sock-preview-benefits {box-shadow: 0px 5px 5px 0px rgba(0,0,0,.1);}
+#shop-all-cta .two-thirds .flex-container-no.jes{ margin-top: 50px; }
+.shop-pacas { width: 30px; }
+#shop-all-cta {box-shadow: inset 0px 7px 17px -7px rgba(0,0,0,.2);}
 .paca-flip-benefits  {
     border: 2px solid #f5fcfc;
     border-radius: 20px;
     margin: 10px auto;
     padding: 0 20px;
 }
+
  #cta { width: 190px; }
  #index .flex-container-no .icon { margin-right: 10px; }
 .sock-preview img {
