--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -108,18 +108,20 @@
 <section class="flex-container-no double-padding" id="shop-all-cta">
   <div class="two-thirds tac">
     <h3>"The world's comfiest sock." - Chicago Times</h3>
-    <div class="ib">
-      <img src="{{'' | asset_url}}" class="shop-pacas">
-      <p>Shop Men</p>
-    </div>
-    <div class="ib">
-      <img src="{{'' | asset_url}}" class="shop-pacas">
-      <p>Shop Women</p>
-    </div>
-    <div class="ib">
-      <img src="{{'' | asset_url}}" class="shop-pacas">
-      <p>Shop Kids</p>
-    </div>
+    <div class="flex-container-no jes">
+      <div class="flex-container-no">
+        <img src="{{'shop-mens.png' | asset_url}}" class="shop-pacas">
+        <p>Shop Men</p>
+      </div>
+      <div class="flex-container-no">
+        <img src="{{'shop-women.png' | asset_url}}" class="shop-pacas">
+        <p>Shop Women</p>
+      </div>
+      <div class="flex-container-no">
+        <img src="{{'shop-kids.png' | asset_url}}" class="shop-pacas">
+        <p>Shop Kids</p>
+      </div>
+  </div>
   </div>
   <div class="third"></div>
 </section>
