styles the shop buttons

--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -561,8 +561,14 @@ footer form {
   background-color: #fdf3ed;
   box-sizing: border-box;
 } 
+
 #shop-all-cta .two-thirds .flex-container-no.jes{ margin-top: 50px; }
-.shop-pacas { width: 30px; }
+.shop-pacas {
+  width: 45px;
+  position: absolute;
+  margin-left: -45px;
+  margin-top: -9px;
+}
 #shop-all-cta {box-shadow: inset 0px 7px 17px -7px rgba(0,0,0,.2);}
 .paca-flip-benefits  {
     border: 2px solid #f5fcfc;
@@ -570,7 +576,12 @@ footer form {
     margin: 10px auto;
     padding: 0 20px;
 }
-
+.shop-wrapper {
+    border: 1px solid #7b8284;
+    border-radius: 80px; 
+     padding: 0 20px 0px 50px;
+}
+.shop-wrapper p { font-size: 10pt; }
  #cta { width: 190px; }
  #index .flex-container-no .icon { margin-right: 10px; }
 .sock-preview img {
