--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -95,7 +95,7 @@
         </div>
       </div>
     </div>
-   </div>
+   </div> 
 </section>
    <script>
       $('.paca-flip-benefits').click(function() {
@@ -109,15 +109,15 @@
   <div class="two-thirds tac">
     <h3>"The world's comfiest sock." - Chicago Times</h3>
     <div class="flex-container-no jes">
-      <div class="flex-container-no">
+      <div class="flex-container-no shop-wrapper">
         <img src="{{'shop-mens.png' | asset_url}}" class="shop-pacas">
         <p>Shop Men</p>
       </div>
-      <div class="flex-container-no">
+      <div class="flex-container-no shop-wrapper">
         <img src="{{'shop-women.png' | asset_url}}" class="shop-pacas">
         <p>Shop Women</p>
       </div>
-      <div class="flex-container-no">
+      <div class="flex-container-no shop-wrapper">
         <img src="{{'shop-kids.png' | asset_url}}" class="shop-pacas">
         <p>Shop Kids</p>
       </div>
