adds in actual links to the collection pages

--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -109,18 +109,24 @@
   <div class="two-thirds tac">
     <h3>"The world's comfiest sock." - Chicago Times</h3>
     <div class="flex-container-no jes">
-      <div class="flex-container-no shop-wrapper">
-        <img src="{{'shop-mens.png' | asset_url}}" class="shop-pacas">
-        <p>Shop Men</p>
-      </div>
-      <div class="flex-container-no shop-wrapper">
-        <img src="{{'shop-women.png' | asset_url}}" class="shop-pacas">
-        <p>Shop Women</p>
-      </div>
-      <div class="flex-container-no shop-wrapper">
-        <img src="{{'shop-kids.png' | asset_url}}" class="shop-pacas">
-        <p>Shop Kids</p>
-      </div>
+      <a href="/collections/mens">
+        <div class="flex-container-no shop-wrapper">
+          <img src="{{'shop-mens.png' | asset_url}}" class="shop-pacas">
+          <p>Shop Men</p>
+        </div>
+      </a>
+      <a href="/collections/womens">
+        <div class="flex-container-no shop-wrapper">
+          <img src="{{'shop-women.png' | asset_url}}" class="shop-pacas">
+          <p>Shop Women</p>
+        </div>
+      </a>
+      <a href="/collections/kids">
+        <div class="flex-container-no shop-wrapper">
+          <img src="{{'shop-kids.png' | asset_url}}" class="shop-pacas">
+          <p>Shop Kids</p>
+        </div>
+      </a>
   </div>
   </div>
   <div class="third"></div>
