mobile responsiveness for middle of index

--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -236,6 +236,8 @@ img { max-width: 100%; }
     padding: 0 50px;
     justify-content: center;
   }
+  .flex-container-do { display: flex; align-items: center; }
+  #sock-preview-benefits { padding: 50px; }
  #account, #account-order, #account-addresses { margin: 50px auto; }
   #materials-grid { padding: 0 50px 50px 50px; }
   .faq { padding: 50px 100px !important; }
@@ -277,7 +279,18 @@ img { max-width: 100%; }
     box-sizing: border-box;
     display: none;
 }
-
+.paca-flip-benefits { height: 53px; }
+#sock-preview-benefits { padding: 0 20px 20px 20px; } 
+  #materials-grid > div, #materials-grid > img {
+    width: 100%;
+    max-width: 300px;
+    margin: 20px auto;
+    height: 300px;
+    box-sizing: border-box;
+    border-radius: 20px;
+}
+#materials-grid > img { display: block; }
+  #materials-grid { padding: 20px; }
   #account-addresses .third, #account .third, #account-order .third{
     width: 100%;
     text-align: center;
