--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -22,7 +22,7 @@
 
   </div>
 </section>
-<section class="flex-container-no jcc" id="materials-grid">
+<section class="flex-container-do jcc" id="materials-grid">
   <img src="{{'newfleece.png' | asset_url}}"  class="fw third"/>
   <div class="paca-facts tac accent-padding background-blue">
     <img src="{{'ribbon.png' | asset_url}}" class="icon third" />
@@ -31,9 +31,9 @@
   <img src="{{'sewing.jpg' | asset_url}}" class="fw third" />
 </section>
 <img src="{{'hearts-desktop3.png' | asset_url}}" class="heart-icons do" id="hd3"/>
-<section class="page-header" id="sock-preview-benefits">
- <div class="flex-container">
-    <div class="sock-preview accent-padding half">
+<section id="sock-preview-benefits">
+ <div class="flex-container-do">
+    <div class="sock-preview accent-padding half-do">
       <div class="flex-container-no jes sock-images">
         <div class="left-arrow"><p class="large">⌃</p></div>
           <div>
@@ -49,7 +49,7 @@
         <p class="clickable" id="dress-socksample"><b>Dress</b></p>
       </div>
     </div>
-   <div class="half">
+   <div class="half-do">
     <div class="accent-padding">
         <div class="two-thirds flex-container-no paca-flip-benefits">
           <img src="{{'crown.png' | asset_url}}" class="icon" />
