--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -236,6 +236,7 @@ img { max-width: 100%; }
     padding: 0 50px;
     justify-content: center;
   }
+  .half-do { width: 50%; box-sizing: border-box; }
   .flex-container-do { display: flex; align-items: center; }
   #sock-preview-benefits { padding: 50px; }
  #account, #account-order, #account-addresses { margin: 50px auto; }
