--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -22,7 +22,7 @@
 
   </div>
 </section>
-<section class="flex-container-do jcc" id="materials-grid">
+<section class="flex-container jcc" id="materials-grid">
   <img src="{{'newfleece.png' | asset_url}}"  class="fw third"/>
   <div class="paca-facts tac accent-padding background-blue">
     <img src="{{'ribbon.png' | asset_url}}" class="icon third" />
