tablet version of the worlds scomfiest sock section

--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -280,6 +280,11 @@ img { max-width: 100%; }
     box-sizing: border-box;
     display: none;
 }
+#press-quote-wrapper { width: 100%; }
+.shop-wrapper {
+    margin: 20px auto;
+    max-width: 83px;
+}
 .paca-flip-benefits { height: 53px; }
 #sock-preview-benefits { padding: 0 20px 20px 20px; } 
 
@@ -582,6 +587,8 @@ footer form {
   background-color: #fdf3ed;
   box-sizing: border-box;
 } 
+  #cta-wrapper { margin-top: 50px; }
+
 #materials-grid div, #materials-grid > img { border-radius: 20px; }
 #shop-all-cta .two-thirds .flex-container-no.jes{ margin-top: 50px; }
 .shop-pacas {
