--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -106,9 +106,13 @@
       })
     </script>
 <section class="flex-container-no double-padding" id="shop-all-cta">
-  <div class="two-thirds tac">
+  <div id="press-quote-wrapper">
+  <div class=" tac" id="cta-tagline">
     <h3>"The world's comfiest sock." - Chicago Times</h3>
-    <div class="flex-container-no jes">
+  </div>
+    <div class="tac">
+
+    <div class="flex-container-do jes" id="cta-wrapper">
       <a href="/collections/mens">
         <div class="flex-container-no shop-wrapper">
           <img src="{{'shop-mens.png' | asset_url}}" class="shop-pacas">
@@ -129,7 +133,7 @@
       </a>
   </div>
   </div>
-  <div class="third"></div>
+</div>
 </section>
 
 
