tablet and mobile formats atf

--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -262,7 +262,7 @@ img { max-width: 100%; }
     margin-right: 50px;
     max-width: 600px;
   } 
-}
+} 
 @media only screen and (max-width: 799px) {
   .page-header { padding: 50px 20px; }
   body #fresh h2 { font-size: 26pt; }
@@ -279,7 +279,14 @@ img { max-width: 100%; }
     width: 100%;
     box-sizing: border-box;
     display: none;
-}
+  }
+  #atf-text  {
+    width: 100%;
+    text-align: center;
+    margin-left: 0 !important;
+    margin-bottom: 100px;
+  }
+  #atf { background-position: center !important; }
 #press-quote-wrapper { width: 100%; }
 .shop-wrapper {
     margin: 20px auto;
